JS animation and menu added

--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,21 @@ body {
 a {
   text-decoration: none; }
 
+.menuContainer {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  position: fixed;
+  top: 1vh;
+  right: 1vw; }
+
+.menu-item {
+  width: 12px;
+  height: 12px;
+  margin-bottom: 1vh;
+  border: 1px solid white;
+  border-radius: 100vw; }
+
 .scrollTarget {
   --currentSection: 0;
   margin-top: calc(-100vh * var(--currentSection));
@@ -33,8 +48,11 @@ a {
 
 .backgroundImage {
   width: 100vw;
+  height: 100vh;
   max-height: 100vh;
-  position: relative; }
+  position: relative;
+  transform: translateZ(80px) scale(1);
+  transform-style: preserve-3d; }
 
 .bgIcon {
   width: 3vw;
@@ -199,7 +217,8 @@ a {
   color: #DCC7A9;
   font-size: 0.8vw;
   font-weight: 400;
-  margin-top: 5vh; }
+  margin-top: 5vh;
+  line-height: 2.5vh; }
 
 .row img {
   width: 100%; }
@@ -238,7 +257,8 @@ a {
     color: white;
     font-family: "Abril Fatface", regular;
     font-size: 5vw;
-    display: inline-block; }
+    display: inline-block;
+    margin-top: 3vh; }
 
 @media (max-width: 400px) {
   .projects {
@@ -368,7 +388,7 @@ a {
 .projectParagraph2 {
   font-family: "Bitter", serif;
   font-size: 1vw;
-  color: white;
+  color: #394047;
   width: 40vw;
   position: absolute;
   left: 20vw;
@@ -376,7 +396,7 @@ a {
 
 .project3 {
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   position: relative; }
 
 .projectTitle3 {
@@ -395,11 +415,11 @@ a {
 
 .bioSection {
   position: relative;
-  height: 70vh; }
+  height: 80vh;
+  margin-bottom: 20vh; }
 
 .bioImage {
   width: 80vw;
-  height: auto;
   position: absolute;
   right: 0; }
   .bioImage img {
@@ -411,7 +431,7 @@ a {
   font-family: "Bitter", serif;
   font-size: 1vw;
   left: 66vw;
-  top: 15vh; }
+  top: 5vh; }
 
 .bold {
   font-weight: bold; }
@@ -421,8 +441,7 @@ a {
   font-weight: bold; }
 
 .contacts {
-  height: 100vh;
-  margin-bottom: 20vh; }
+  height: 100vh; }
   .contacts .sectionImage {
     width: 5vw;
     text-align: center;
@@ -475,6 +494,9 @@ input:focus {
   border: 2px solid #D0A233;
   outline: none;
   color: white; }
+
+footer {
+  margin-top: 20vh; }
 
 footer p {
   text-align: center;
