--- a/style/main.css
+++ b/style/main.css
@@ -9,15 +9,32 @@ a {
   justify-content: flex-end;
   flex-direction: column;
   position: fixed;
-  top: 1vh;
-  right: 1vw; }
+  top: 50vh;
+  right: 1vw;
+  transform: translateY(-50%);
+  z-index: 10000; }
 
 .menu-item {
+  position: relative;
   width: 12px;
   height: 12px;
   margin-bottom: 1vh;
   border: 1px solid white;
-  border-radius: 100vw; }
+  border-radius: 100vw;
+  cursor: pointer;
+  text-align: right; }
+
+.introLabel {
+  opacity: 0; }
+  .introLabel.visible {
+    width: 5vw;
+    position: absolute;
+    right: 1vw;
+    font-family: "Lato", sans-serif;
+    color: #D0A233;
+    margin-top: -0.5vh;
+    opacity: 1;
+    transition: opacity 0.2s ease; }
 
 .scrollTarget {
   --currentSection: 0;
@@ -41,10 +58,34 @@ a {
   color: white;
   font-size: 5vw; }
 
+.typewriter {
+  overflow: hidden;
+  border-right: 0.15rem solid transparent;
+  padding-right: 4px;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.15rem;
+  animation: typing 2.5s steps(30, end), blink-caret 1s step-end 3; }
+
+@keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent; }
+  50% {
+    border-color: white; } }
+@keyframes professionAppear {
+  from {
+    opacity: 0;
+    transform: translateY(200px); } }
 .profession {
   font-family: "Abril Fatface", regular;
   color: #D0A233;
-  font-size: 2.5vw; }
+  font-size: 2.5vw;
+  animation: professionAppear 1s ease; }
 
 .backgroundImage {
   width: 100vw;
@@ -161,9 +202,8 @@ a {
     text-transform: uppercase;
     font-family: "Bitter", serif;
     font-size: 1vw;
-    display: inline-block; }
-    .scrollAction .scroll a {
-      color: white; }
+    display: inline-block;
+    color: white; }
   .scrollAction .scrollImage {
     width: 1vw; }
 
@@ -171,9 +211,19 @@ a {
   width: 100vw;
   height: 100vh; }
 
+.workflowSections {
+  transform: translateY(10vh);
+  transition: transform 1s ease, opacity 1s ease;
+  opacity: 0; }
+
+.visible .workflowSections {
+  transform: translateY(0);
+  opacity: 1; }
+
 .sectionTitle {
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-top: 4vh; }
   .sectionTitle .sectionImage {
     width: 5vw;
     text-align: center;
@@ -196,10 +246,10 @@ a {
     display: inline-block; }
 
 .subtitle {
-  font-family: "Bitter", serif;
+  font-family: "Lato", sans-serif;
   font-style: italic;
   color: #DCC7A9;
-  margin: 4vh 0;
+  margin: 3vh 0 9vh 0;
   text-align: center; }
   .subtitle h5 {
     font-size: 1.8vw; }
@@ -209,16 +259,16 @@ a {
   font-weight: 700;
   letter-spacing: 0.09vw;
   color: white;
-  font-size: 1vw;
+  font-size: 1.2vw;
   text-align: center; }
 
 .phaseParagraph {
-  font-family: "Bitter", serif;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
   color: #DCC7A9;
-  font-size: 0.8vw;
-  font-weight: 400;
+  font-size: 1vw;
   margin-top: 5vh;
-  line-height: 2.5vh; }
+  line-height: 2.7vh; }
 
 .row img {
   width: 100%; }
@@ -234,12 +284,12 @@ a {
     margin-top: 2vh;
     font-size: 2vw; } }
 .projects {
-  max-width: 100vw; }
+  max-height: 300vh; }
 
 .sectionTitleProjects {
   width: 100%;
   text-align: center;
-  margin-bottom: 20vh; }
+  padding-bottom: 20vh; }
   .sectionTitleProjects .sectionImage {
     width: 5vw;
     text-align: center;
@@ -263,22 +313,35 @@ a {
 @media (max-width: 400px) {
   .projects {
     margin: 15vh; } }
+.videoPlayer {
+  width: 100vw;
+  height: 30vh;
+  object-fit: cover;
+  overflow: hidden;
+  transform: translateY(-10vh);
+  transition: transform 1s ease; }
+
+.visible .videoPlayer {
+  transform: translateY(0); }
+
 .project-1 {
-  height: 80vh;
+  height: 100vh;
   width: 100vw;
   position: relative; }
 
 .rectangle-1 {
-  width: 85vw;
-  height: 35vh;
-  background-color: rgba(176, 188, 196, 0.6); }
+  width: 90vw;
+  height: 45vh;
+  background-color: rgba(176, 188, 196, 0.6);
+  position: absolute;
+  top: -10vh; }
 
-.imageProject {
+.video {
   width: 30vw;
   position: absolute;
-  top: -10vh;
+  top: -15vh;
   left: 5vw; }
-  .imageProject img {
+  .video video {
     width: 100%; }
 
 .projectTitle {
@@ -287,14 +350,21 @@ a {
   font-size: 5vw;
   color: #D0A233;
   position: absolute;
-  top: -8vh;
-  left: 60vw;
-  text-shadow: 0 3px 8px #394047; }
+  top: -18vh;
+  left: 65vw;
+  text-shadow: 0 3px 8px #394047;
+  opacity: 0;
+  transform: translateX(5vw);
+  transition: transform 1s ease, opacity 1s ease; }
+
+.visible .projectTitle {
+  transform: translateX(0);
+  opacity: 1; }
 
 .tagsContainer {
   position: absolute;
-  top: 5vh;
-  left: 38vw; }
+  top: 0;
+  left: 40vw; }
 
 .tag {
   display: inline-block;
@@ -305,18 +375,20 @@ a {
   font-family: "Bitter", serif;
   font-size: 0.9vw;
   text-align: center;
-  padding-top: 0.7vh;
-  border-radius: 0.5vw;
-  opacity: 0.7; }
+  padding-top: 0.5vh;
+  border-radius: 0.3vw;
+  opacity: 0.7;
+  margin-right: 1vw; }
 
 .projectParagraph {
-  font-family: "Bitter", serif;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
   font-size: 1vw;
   color: white;
   width: 40vw;
   position: absolute;
-  top: 15vh;
-  left: 38vw; }
+  top: 10vh;
+  left: 40vw; }
 
 .phases {
   margin-top: 5vh; }
@@ -347,9 +419,17 @@ a {
 
   .phases {
     display: none; } }
-.project2 {
+.project-2 {
   height: 100vh;
   width: 100vw; }
+  .project-2 .projectTitle {
+    font-family: "Abril Fatface", regular;
+    font-size: 5vw;
+    color: white;
+    position: absolute;
+    left: 20vw;
+    top: -7vh;
+    text-shadow: 0 3px 8px #394047; }
 
 .projectShowcase {
   position: relative;
@@ -358,149 +438,130 @@ a {
 
 .rectangle-2 {
   background-color: #DCC7A9;
-  width: 85vw;
-  height: 35vh;
+  width: 90vw;
+  height: 45vh;
   position: absolute;
   right: 0; }
 
-.imageProject2 {
+.video-2 {
   width: 30vw;
   position: absolute;
-  right: 7vw;
-  top: -5vh; }
-  .imageProject2 img {
+  top: -10vh;
+  right: 10vw; }
+  .video-2 video {
     width: 100%; }
-
-.projectTitle2 {
-  font-family: "Abril Fatface", regular;
-  font-size: 5vw;
-  color: white;
-  position: absolute;
-  left: 20vw;
-  top: -7vh;
-  text-shadow: 0 3px 8px #394047; }
 
 .tagsContainer2 {
   position: absolute;
-  left: 45vw;
-  top: 5vh; }
+  left: 38vw;
+  top: 10vh; }
 
 .projectParagraph2 {
-  font-family: "Bitter", serif;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
   font-size: 1vw;
   color: #394047;
   width: 40vw;
   position: absolute;
-  left: 20vw;
-  top: 15vh; }
+  left: 15vw;
+  top: 20vh; }
 
-.project3 {
+.project-3 {
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
   position: relative; }
+  .project-3 .projectTitle {
+    width: 50vw;
+    font-family: "Abril Fatface", regular;
+    font-size: 5vw;
+    color: #D0A233;
+    position: absolute;
+    top: -17vh;
+    left: 45vw;
+    text-shadow: 0 3px 8px #394047; }
 
-.projectTitle3 {
-  width: 50vw;
-  font-family: "Abril Fatface", regular;
-  font-size: 5vw;
-  color: #D0A233;
+.rectangle-3 {
+  width: 85vw;
+  height: 30vh;
+  background-color: rgba(176, 188, 196, 0.6);
   position: absolute;
-  top: -8vh;
-  left: 38vw;
-  text-shadow: 0 3px 8px #394047; }
+  top: 10vh; }
 
 .about {
   width: 100vw;
   height: 100vh; }
 
 .bioSection {
-  position: relative;
-  height: 80vh;
-  margin-bottom: 20vh; }
+  height: 50vh; }
+  .bioSection img {
+    width: 100%; }
 
 .bioImage {
-  width: 80vw;
-  position: absolute;
-  right: 0; }
-  .bioImage img {
-    width: 100%; }
+  opacity: 0;
+  transform: translateX(-5vw);
+  transition: transform 1s ease, opacity 1s ease; }
+
+.visible .bioImage {
+  transform: translateX(0);
+  opacity: 1; }
 
 .bioText {
   width: 30vw;
-  position: absolute;
-  font-family: "Bitter", serif;
+  font-family: "Lato", sans-serif;
   font-size: 1vw;
-  left: 66vw;
-  top: 5vh; }
+  color: white;
+  line-height: 3vh;
+  opacity: 0;
+  transform: translateX(5vw);
+  transition: transform 1s ease, opacity 1s ease; }
+
+.visible .bioText {
+  transform: translateX(0);
+  opacity: 1; }
 
 .bold {
-  font-weight: bold; }
+  font-weight: bold;
+  color: #DCC7A9; }
 
 .highlight {
   color: #D0A233;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 1.3vw; }
 
-.contacts {
-  height: 100vh; }
-  .contacts .sectionImage {
-    width: 5vw;
-    text-align: center;
-    animation: rotate-scale-up-diag-1 6s ease infinite; }
-@keyframes rotate-scale-up-diag-1 {
-  0% {
-    transform: scale(1) rotate3d(1, 1, 0, 0deg); }
-  30% {
-    transform: scale(1.5) rotate3d(1, 1, 0, -180deg); }
-  60% {
-    transform: scale(1) rotate3d(1, 1, 0, -360deg); }
-  100% {
-    transform: scale(1) rotate3d(1, 1, 0, -360deg); } }
-.contactsTitle {
-  margin-bottom: 15vh; }
+.contactContainer {
+  display: flex;
+  width: 20vw;
+  justify-content: space-around;
+  margin: 0 auto; }
 
-.icon {
-  max-width: 10vw;
-  margin-bottom: 5vh; }
-  .icon img {
-    width: 20%; }
+.contact {
+  margin: 0 auto;
+  padding-top: 3.5vh;
+  width: 40vw; }
 
-input {
-  height: 3vh;
-  border-bottom: 1px solid #D0A233;
-  background-color: transparent;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  font-family: "Bitter", serif;
-  font-size: 0.8vw;
-  margin-bottom: 3vh; }
+.contactMe {
+  font-family: "Lato", sans-serif;
+  font-size: 1vw;
+  color: white;
+  text-align: center; }
+  .contactMe .highlight {
+    text-transform: uppercase; }
 
-input:focus {
-  border-bottom: 2px solid #D0A233;
-  outline: none;
-  color: white; }
+.logos {
+  display: flex;
+  justify-content: space-around;
+  width: 60vw;
+  margin: 5vh auto; }
 
-.message {
-  margin: 4vh 0;
-  height: 10vh;
-  border: 1px solid #D0A233;
-  border-radius: 3px;
-  background-color: transparent;
-  max-width: 38vw;
-  font-family: "Bitter", serif;
-  font-size: 0.8vw; }
+.animojiContainer img {
+  width: 110px; }
 
-.message:focus {
-  border: 2px solid #D0A233;
-  outline: none;
-  color: white; }
+.logo-item {
+  width: 2vw; }
+  .logo-item img {
+    width: 100%; }
 
-footer {
-  margin-top: 20vh; }
-
-footer p {
-  text-align: center;
-  color: #DCC7A9;
-  font-family: "Bitter", serif; }
+::-webkit-scrollbar {
+  display: none; }
 
 /*# sourceMappingURL=main.css.map */
