--- a/style/main.sass
+++ b/style/main.sass
@@ -8,8 +8,15 @@ $tagOpacity: 0.7
 //FONTS
 $abril: 'Abril Fatface', regular
 $bitter: 'Bitter', serif
+$lato: 'Lato', sans-serif
 
 $sectionTitle: 5vw
+
+//OTHERS
+
+$videoSize: 30vw
+$rectangleWidth: 90vw
+$rectangleHeight: 45vh
 
 body
   background-color: $brey
@@ -26,18 +33,41 @@ a
   justify-content: flex-end
   flex-direction: column
   position: fixed
-  top: 1vh
+  top: 50vh
   right: 1vw
+  transform: translateY(-50%)
+  z-index: 10000
 
 
 .menu-item
+  position: relative
   width: 12px
   height: 12px
   margin-bottom: 1vh
   border: 1px solid white
   border-radius: 100vw
+  cursor: pointer
+  text-align: right
 
-  //SCROLLTARGET
+
+
+.introLabel
+  opacity: 0
+
+  &.visible
+    width: 5vw
+    position: absolute
+    right: 1vw
+    font-family: $lato
+    color: $mustard
+    margin-top: -0.5vh
+    opacity: 1
+    transition: opacity .2s ease
+
+
+
+
+//SCROLLTARGET
 
 .scrollTarget
   --currentSection: 0
@@ -64,10 +94,39 @@ a
   color: white
   font-size: 5vw
 
+.typewriter
+  overflow: hidden
+  border-right: .15rem solid transparent
+  padding-right: 4px
+  white-space: nowrap
+  margin: 0 auto
+  letter-spacing: .15rem
+  animation: typing 2.5s steps(30, end), blink-caret 1s step-end 3
+
+@keyframes typing
+  from
+    width: 0
+  to
+    width: 100%
+
+@keyframes blink-caret
+  from, to
+    border-color: transparent
+  50%
+    border-color: white
+
+
+
+@keyframes professionAppear
+  from
+    opacity: 0
+    transform: translateY(200px)
+
 .profession
   font-family: $abril
   color: $mustard
   font-size: 2.5vw
+  animation: professionAppear 1s ease
 
 .backgroundImage
   width: 100vw
@@ -196,9 +255,7 @@ a
     font-family: $bitter
     font-size: 1vw
     display: inline-block
-
-    a
-      color: white
+    color: white
 
   .scrollImage
     width: 1vw
@@ -209,9 +266,19 @@ a
   width: 100vw
   height: 100vh
 
+.workflowSections
+  transform: translateY(10vh)
+  transition: transform 1s ease, opacity 1s ease
+  opacity: 0
+
+.visible .workflowSections
+  transform: translateY(0)
+  opacity: 1
+
 .sectionTitle
   width: 100%
   text-align: center
+  margin-top: 4vh
 
   .sectionImage
     width: 5vw
@@ -238,10 +305,10 @@ a
     display: inline-block
 
 .subtitle
-  font-family: $bitter
+  font-family: $lato
   font-style: italic
   color: $ivory
-  margin: 4vh 0
+  margin: 3vh 0 9vh 0
   text-align: center
 
   h5
@@ -252,19 +319,22 @@ a
   font-weight: 700
   letter-spacing: 0.09vw
   color: white
-  font-size: 1vw
+  font-size: 1.2vw
   text-align: center
 
 .phaseParagraph
-  font-family: $bitter
+  font-family: $lato
+  font-weight: 300
   color: $ivory
-  font-size: 0.8vw
-  font-weight: 400
+  font-size: 1vw
   margin-top: 5vh
-  line-height: 2.5vh
+  line-height: 2.7vh
 
 .row img
   width: 100%
+
+
+
 
 
 @media (max-width: 400px)
@@ -285,14 +355,13 @@ a
 // PROJECTS
 
 .projects
-  //margin-top: 20vh
-  max-width: 100vw
-
+  max-height: 300vh
 
 .sectionTitleProjects
   width: 100%
   text-align: center
-  margin-bottom: 20vh
+  padding-bottom: 20vh
+
 
   .sectionImage
     width: 5vw
@@ -329,26 +398,48 @@ a
   .projects
     margin: 15vh
 
+
+// VIDEO PLAYER
+
+.videoPlayer
+  width: 100vw
+  height: 30vh
+  object-fit: cover
+  overflow: hidden
+  transform: translateY(-10vh)
+  transition: transform 1s ease
+
+
+.visible .videoPlayer
+  transform: translateY(0)
+
+
+
+
 // PROJECT 1
 
 .project-1
-  height: 80vh
+  height: 100vh
   width: 100vw
   position: relative
 
+
+
 .rectangle-1
-  width: 85vw
-  height: 35vh
+  width: $rectangleWidth
+  height: $rectangleHeight
   background-color: $lightgrey
-
-
-.imageProject
-  width: 30vw
   position: absolute
   top: -10vh
+
+
+.video
+  width: $videoSize
+  position: absolute
+  top: -15vh
   left: 5vw
 
-  img
+  video
     width: 100%
 
 .projectTitle
@@ -357,14 +448,25 @@ a
   font-size: 5vw
   color: $mustard
   position: absolute
-  top: -8vh
-  left: 60vw
+  top: -18vh
+  left: 65vw
   text-shadow: 0 3px 8px $brey
+  opacity: 0
+  transform: translateX(5vw)
+  transition: transform 1s ease, opacity 1s ease
+
+.visible .projectTitle
+  transform: translateX(0)
+  opacity: 1
+
+
+
+
 
 .tagsContainer
   position: absolute
-  top: 5vh
-  left: 38vw
+  top: 0
+  left: 40vw
 
 .tag
   display: inline-block
@@ -375,18 +477,20 @@ a
   font-family: $bitter
   font-size: 0.9vw
   text-align: center
-  padding-top: 0.7vh
-  border-radius: 0.5vw
+  padding-top: 0.5vh
+  border-radius: 0.3vw
   opacity: $tagOpacity
+  margin-right: 1vw
 
 .projectParagraph
-  font-family: $bitter
+  font-family: $lato
+  font-weight: 300
   font-size: 1vw
   color: white
   width: 40vw
   position: absolute
-  top: 15vh
-  left: 38vw
+  top: 10vh
+  left: 40vw
 
 .phases
   margin-top: 5vh
@@ -424,9 +528,20 @@ a
 
 //PROJECT 2
 
-.project2
+.project-2
   height: 100vh
   width: 100vw
+
+
+  .projectTitle
+    font-family: $abril
+    font-size: 5vw
+    color: white
+    position: absolute
+    left: 20vw
+    top: -7vh
+    text-shadow: 0 3px 8px $brey
+
 
 .projectShowcase
   position: relative
@@ -435,59 +550,60 @@ a
 
 .rectangle-2
   background-color: $ivory
-  width: 85vw
-  height: 35vh
+  width: $rectangleWidth
+  height: $rectangleHeight
   position: absolute
   right: 0
 
-.imageProject2
-  width: 30vw
+.video-2
+  width: $videoSize
   position: absolute
-  right: 7vw
-  top: -5vh
+  top: -10vh
+  right: 10vw
 
-  img
+  video
     width: 100%
-
-.projectTitle2
-  font-family: $abril
-  font-size: 5vw
-  color: white
-  position: absolute
-  left: 20vw
-  top: -7vh
-  text-shadow: 0 3px 8px $brey
 
 .tagsContainer2
   position: absolute
-  left: 45vw
-  top: 5vh
+  left: 38vw
+  top: 10vh
 
 .projectParagraph2
-  font-family: $bitter
+  font-family: $lato
+  font-weight: 300
   font-size: 1vw
   color: $brey
   width: 40vw
   position: absolute
-  left: 20vw
-  top: 15vh
+  left: 15vw
+  top: 20vh
 
 //PROJECT 3
 
-.project3
+.project-3
   width: 100vw
-  height: 90vh
+  height: 100vh
   position: relative
 
-.projectTitle3
-  width: 50vw
-  font-family: $abril
-  font-size: 5vw
-  color: $mustard
+  .projectTitle
+    width: 50vw
+    font-family: $abril
+    font-size: 5vw
+    color: $mustard
+    position: absolute
+    top: - 17vh
+    left: 45vw
+    text-shadow: 0 3px 8px $brey
+
+
+.rectangle-3
+  width: 85vw
+  height: 30vh
+  background-color: $lightgrey
   position: absolute
-  top: -8vh
-  left: 38vw
-  text-shadow: 0 3px 8px $brey
+  top: 10vh
+
 
 // ABOUT
 
@@ -496,110 +612,89 @@ a
   height: 100vh
 
 .bioSection
-  position: relative
-  height: 80vh
-  margin-bottom: 20vh
-
-
-.bioImage
-  width: 80vw
-  position: absolute
-  right: 0
-
+  height: 50vh
 
   img
     width: 100%
 
+.bioImage
+  opacity: 0
+  transform: translateX(-5vw)
+  transition: transform 1s ease, opacity 1s ease
+
+.visible .bioImage
+  transform: translateX(0)
+  opacity: 1
+
 .bioText
   width: 30vw
-  position: absolute
-  font-family: $bitter
+  font-family: $lato
   font-size: 1vw
-  left: 66vw
-  top: 5vh
+  color: white
+  line-height: 3vh
+  opacity: 0
+  transform: translateX(5vw)
+  transition: transform 1s ease, opacity 1s ease
+
+.visible .bioText
+  transform: translateX(0)
+  opacity: 1
+
 
 .bold
   font-weight: bold
+  color: $ivory
 
 .highlight
-  //margin-top: 20vh
   color: $mustard
   font-weight: bold
-
-// CONTACTS
-
-.contacts
-  height: 100vh
-
-  .sectionImage
-    width: 5vw
-    text-align: center
-    animation: rotate-scale-up-diag-1 6s ease infinite
+  font-size: 1.3vw
 
 
+  //CONTACTS
 
-  @keyframes rotate-scale-up-diag-1
-    0%
-      transform: scale(1) rotate3d(1, 1, 0, 0deg)
+.contactContainer
+  display: flex
+  width: 20vw
+  justify-content: space-around
+  margin: 0 auto
 
-    30%
-      transform: scale(1.5) rotate3d(1, 1, 0, -180deg)
-
-
-    60%
-      transform: scale(1) rotate3d(1, 1, 0, -360deg)
-
-    100%
-      transform: scale(1) rotate3d(1, 1, 0, -360deg)
+.contact
+  margin: 0 auto
+  padding-top: 3.5vh
+  width: 40vw
 
 
-
-.contactsTitle
-  margin-bottom: 15vh
-
-.icon
-  max-width: 10vw
-  margin-bottom: 5vh
-  img
-    width: 20%
-
-
-input
-  height: 3vh
-  border-bottom: 1px solid $mustard
-  background-color: transparent
-  border-top: none
-  border-right: none
-  border-left: none
-  font-family: $bitter
-  font-size: 0.8vw
-  margin-bottom: 3vh
-
-input:focus
-  border-bottom: 2px solid $mustard
-  outline: none
+.contactMe
+  font-family: $lato
+  font-size: 1vw
   color: white
-
-.message
-  margin: 4vh 0
-  height: 10vh
-  border: 1px solid $mustard
-  border-radius: 3px
-  background-color: transparent
-  max-width: 38vw
-  font-family: $bitter
-  font-size: 0.8vw
-
-.message:focus
-  border: 2px solid $mustard
-  outline: none
-  color: white
-
-footer
-  margin-top: 20vh
-
-footer p
   text-align: center
-  color: $ivory
-  font-family: $bitter
+
+  .highlight
+    text-transform: uppercase
+
+
+.logos
+  display: flex
+  justify-content: space-around
+  width: 60vw
+  margin: 5vh auto
+
+.animojiContainer
+ 
+  img
+    width: 110px
+
+.logo-item
+  width: 2vw
+
+  img
+    width: 100%
+
+
+// SCROLLBAR
+
+::-webkit-scrollbar
+  display: none
 
