--- a/style/main.css
+++ b/style/main.css
@@ -203,85 +203,6 @@ a {
   .scrollAction .scrollImage {
     width: 1vw; }
 
-.workflow {
-  width: 100vw;
-  height: 100vh; }
-
-.workflowSections {
-  transform: translateY(10vh);
-  transition: transform 1s ease, opacity 1s ease;
-  opacity: 0; }
-
-.visible .workflowSections {
-  transform: translateY(0);
-  opacity: 1; }
-
-.sectionTitle {
-  width: 100%;
-  text-align: center;
-  margin-top: 4vh; }
-  .sectionTitle .sectionImage {
-    width: 5vw;
-    text-align: center;
-    animation-name: spinning;
-    animation-duration: 6s;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease; }
-@keyframes spinning {
-  0% {
-    transform: rotate(0deg); }
-  60% {
-    transform: rotate(360deg); }
-  100% {
-    transform: rotate(360deg); } }
-  .sectionTitle h3 {
-    color: white;
-    font-family: "Abril Fatface", regular;
-    font-size: 5vw;
-    display: inline-block; }
-
-.subtitle {
-  font-family: "Lato", sans-serif;
-  font-style: italic;
-  color: #DCC7A9;
-  margin: 3vh 0 9vh 0;
-  text-align: center; }
-  .subtitle h5 {
-    font-size: 1.8vw; }
-  .subtitle .emoji {
-    font-style: normal;
-    width: 100px; }
-
-.phaseTitle {
-  font-family: "Bitter", serif;
-  font-weight: 700;
-  letter-spacing: 0.09vw;
-  color: white;
-  font-size: 1.2vw;
-  text-align: center; }
-
-.phaseParagraph {
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  color: #DCC7A9;
-  font-size: 1vw;
-  margin-top: 5vh;
-  line-height: 2.7vh; }
-
-.row img {
-  width: 100%; }
-
-@media (max-width: 400px) {
-  .subtitle {
-    margin: 0; }
-
-  .phaseTitle {
-    font-size: 2.5vw; }
-
-  .phaseParagraph {
-    margin-top: 2vh;
-    font-size: 2vw; } }
 .projects {
   max-height: 300vh; }
 
@@ -518,6 +439,152 @@ a {
   position: absolute;
   top: 10vh; }
 
+.workflow {
+  width: 100vw;
+  height: 100vh; }
+
+.workflowSections {
+  transform: translateY(10vh);
+  transition: transform 1s ease, opacity 1s ease;
+  opacity: 0;
+  position: relative; }
+
+.visible .workflowSections {
+  transform: translateY(0);
+  opacity: 1; }
+
+.sectionTitle {
+  width: 100%;
+  text-align: center;
+  margin-top: 4vh; }
+  .sectionTitle .sectionImage {
+    width: 5vw;
+    text-align: center;
+    animation-name: spinning;
+    animation-duration: 6s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease; }
+@keyframes spinning {
+  0% {
+    transform: rotate(0deg); }
+  60% {
+    transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg); } }
+  .sectionTitle h3 {
+    color: white;
+    font-family: "Abril Fatface", regular;
+    font-size: 5vw;
+    display: inline-block; }
+
+.subtitle {
+  font-family: "Lato", sans-serif;
+  font-style: italic;
+  color: #DCC7A9;
+  margin: 3vh 0 9vh 0;
+  text-align: center; }
+  .subtitle h5 {
+    font-size: 1.8vw; }
+  .subtitle .emoji {
+    font-style: normal;
+    width: 100px; }
+
+.phaseTitle {
+  font-family: "Abril Fatface", regular;
+  font-weight: 700;
+  letter-spacing: 0.09vw;
+  color: white;
+  font-size: 1.5vw; }
+
+.phaseParagraph {
+  font-family: "Lato", sans-serif;
+  font-weight: lighter;
+  color: #DCC7A9;
+  font-size: 1vw;
+  margin-top: 2vh;
+  line-height: 3vh; }
+
+.row img {
+  width: 100%; }
+
+.phase-1 {
+  position: absolute;
+  top: 5vh;
+  left: 0; }
+
+.number {
+  font-size: 3.5vw;
+  color: rgba(208, 162, 51, 0.7);
+  z-index: -100;
+  position: absolute;
+  top: -2.7vh;
+  left: -0.7vw; }
+
+.path-1 {
+  width: 10vw;
+  position: absolute;
+  top: 10vh;
+  left: 13vw;
+  transform: rotate(0); }
+
+.visible .path-1 {
+  transform: rotate(30deg); }
+
+.path-2 {
+  width: 10vw;
+  position: absolute;
+  top: 40vh;
+  left: 35vw;
+  transform: rotate(0); }
+
+.visible .path-2 {
+  transform: rotate(10deg); }
+
+.path-3 {
+  width: 10vw;
+  position: absolute;
+  top: 25vh;
+  left: 57vw;
+  transform: rotate(0); }
+
+.visible .path-3 {
+  transform: rotate(20deg); }
+
+.paths {
+  opacity: 0;
+  transition: opacity 1s ease, transform 1s ease; }
+
+.visible .paths {
+  opacity: 1; }
+  .visible .paths img {
+    width: 100%; }
+
+.phase-2 {
+  position: absolute;
+  top: 35vh;
+  left: 15vw; }
+
+.phase-3 {
+  position: absolute;
+  top: 20vh;
+  left: 40vw; }
+
+.phase-4 {
+  position: absolute;
+  top: 50vh;
+  left: 60vw; }
+
+@media (max-width: 400px) {
+  .subtitle {
+    margin: 0; }
+
+  .phaseTitle {
+    font-size: 2.5vw; }
+
+  .phaseParagraph {
+    margin-top: 2vh;
+    font-size: 2vw; } }
 .about {
   width: 100vw;
   height: 100vh; }
